# czech-dictionary-extender

./: .gitignore  README.md  pyproject.toml
czech_dictionary_extender/: create_extended_dictionary.py
tests/: test_czech_dictionary_extender.py
