[tool.poetry]
name = "czech-dictionary-extender"
version = "0.1.0"
description = ""
authors = ["Vuizur <Vuizur@users.noreply.github.com>"]

[tool.poetry.dependencies]
python = "^3.10"
pyglossary = "*"
wordfreq = "*"
#czech-inflections-lemmatizer = https://github.com/Vuizur/czech-inflections-lemmatizer #{path = "../czech-inflections-lemmatizer"}
czech-inflections-lemmatizer = {git = "https://github.com/Vuizur/czech-inflections-lemmatizer.git"}

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
